2009-10-06  Boris Kolpackov  <boris@codesynthesis.com>

	* dep.h (uniquize_deps): Remove.

	* read.c (uniquize_deps): Merge into set_file_variables in
	commands.c.
	(dep_hash_1, dep_hash_2, dep_hash_cmp): Move to commands.c.

	* commands.c (set_file_variables): Avoid modifying the dep
	chain to achieve uniqueness. Fixes savannah bug 25780.

	* implicit.c (pattern_search): Instead of re-setting all automatic
	variables for each rule we try, just update $*.

2009-10-06  Boris Kolpackov  <boris@codesynthesis.com>

	* variable.h (undefine_variable_in_set): New function declaration.
	(undefine_variable_global): New macro.

	* variable.c (undefine_variable_in_set): New function implementation.

	* read.c (vmodifiers): Add undefine_v modifier.
	(parse_var_assignment): Parse undefine.
	(do_undefine): Handle the undefine directive.
	(eval): Call do_undefine if undefine_v is set.

	* main.c (.FEATURES): Add a keyword to indicate the new feature.

	* doc/make.texi (Undefine Directive): Describe the new directive.

	* NEWS: Add a note about the new directive.

2009-10-05  Boris Kolpackov  <boris@codesynthesis.com>

	* implicit.c (pattern_search): Initialize file variables only
	if we need to parse a rule that requires the second expansion.

2009-10-03  Paul Smith  <psmith@gnu.org>

	* make.h: Include <alloca.h> even on systems where __GNUC__ is
	defined.  Not sure why it was done the other way.
	Requested by David Boyce <dsb@boyski.com>.

2009-09-30  Boris Kolpackov  <boris@codesynthesis.com>

	* dep.h (dep): Add the DONTCARE bitfield.

	* filedef.h (file):Add the NO_DIAG bitfield.

        * read.c (eval_makefile): Set the DONTCARE flag in struct dep,
	not struct file (a file can be a dependency of many targets,
	some don't care, some do).

	* remake.c (update_goal_chain): Propagate DONTCARE from struct
	dep to struct file before updating the goal and restore it
	afterwards.
	(update_file): Don't prune the dependency graph if this target